# ghostchat

./: .gitignore  LICENSE  README.md  build_output.txt  build_output2.txt  build_output3.txt  build_tauri_out.txt  chainsafe_yamux.json  chainsafe_yamux_8_deps.json  index.html  libp2p_deps.json  libp2p_versions.json  package.json  pnpm-lock.yaml  pnpm_output.txt  tailwind.config.js  ts_output.txt  ts_output_final.txt  utils_versions.json  vite.config.ts  yamux6_deps.json  yamux70_deps.json  yamux7_deps.json  yamux_old.json  yamux_versions.json
scripts/: spawn_agents.js  spawn_agents.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  key_rotation.rs  lib.rs  main.rs  network_probe.rs  p2p.rs  test_webrtc.rs  tor.rs
src/@types/: argon2-browser.d.ts
src/components/: AddContactModal.tsx  ChatArea.tsx  ChatHeader.tsx  ContactItem.tsx  GhostLogo.tsx  Identicon.tsx  KeyVerificationModal.tsx  MessageBubble.tsx  MessageInput.tsx  NetworkStatusPanel.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx
src/hooks/: index.ts  useEphemeralTimer.ts  useGhostChat.ts
src/lib/crypto/: double-ratchet.ts  encryption.ts  identity.ts  index.ts  kdf.ts  key-exchange.ts  noise.ts  safety-numbers.ts
src/lib/p2p/: connections.ts  ghost-mode.ts  index.ts  message-service.ts  node.ts  peer-discovery.ts  protocol.ts  session-manager.ts  x3dh.ts
src/lib/storage/: database.ts  ephemeral.ts  identity-store.ts  index.ts  master-key.ts  prekey-store.ts  repository.ts
src/stores/: appStore.ts  chatStore.ts  contactStore.ts  index.ts
src/types/: index.ts
src/utils/: index.ts
(+1 files in other folders)
