[package]
name = "ghostchat"
version = "0.1.0"
description = "GhostChat — Pure P2P Encrypted Messaging"
authors = ["GhostChat"]
edition = "2021"

[lib]
name = "ghostchat_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
