[package]
name = "ghostchat"
version = "0.1.0"
description = "GhostChat — Pure P2P Encrypted Messaging"
authors = ["GhostChat"]
edition = "2021"

[lib]
name = "ghostchat_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "sync", "macros", "rt-multi-thread"] }
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "kad", "identify", "ping", "relay", "rendezvous", "dcutr", "mdns", "macros", "request-response", "cbor", "tokio", "dns", "quic"] }
futures = "0.3"
hex = "0.4"
rand = "0.8"
local-ip-address = "0.6"
keyring = "3.2"
stun = "0.6"
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
